--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,15 @@
     "description": "Eloquent cross database compatibility in subqueries",
     "type": "library",
     "require": {
-        "php": ">=7.1.3",
-        "illuminate/support": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/container": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/database": "^5.6 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/events": "^5.6 || ^6.0 || ^7.0 || ^8.0"
+        "php": "^8.0.2",
+        "illuminate/support": "^9.0",
+        "illuminate/container": "^9.0",
+        "illuminate/database": "^9.0",
+        "illuminate/events": "^9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "orchestra/testbench": "3.6.x",
-        "codacy/coverage": "dev-master"
+        "phpunit/phpunit": "^9.5.10",
+        "orchestra/testbench": "^7.5.0"
     },
     "autoload": {
         "psr-4": {
