--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,14 @@
     "type": "library",
     "require": {
         "php": "^8.0.2",
-        "illuminate/support": "^9.0",
-        "illuminate/container": "^9.0",
-        "illuminate/database": "^9.0",
-        "illuminate/events": "^9.0"
+        "illuminate/support": "^9.0 || ^10.0",
+        "illuminate/container": "^9.0 || ^10.0",
+        "illuminate/database": "^9.0 || ^10.0",
+        "illuminate/events": "^9.0 || ^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10",
-        "orchestra/testbench": "^7.5.0"
+        "phpunit/phpunit": "^10.5",
+        "orchestra/testbench": "^8.19"
     },
     "autoload": {
         "psr-4": {
