--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,15 @@
     "description": "Eloquent cross database compatibility in subqueries",
     "type": "library",
     "require": {
-        "php": "^8.0.2",
-        "illuminate/support": "^9.0 || ^10.0",
-        "illuminate/container": "^9.0 || ^10.0",
-        "illuminate/database": "^9.0 || ^10.0",
-        "illuminate/events": "^9.0 || ^10.0"
+        "php": "^8.3",
+        "illuminate/support": "^11.0",
+        "illuminate/container": "^11.0",
+        "illuminate/database": "^11.0",
+        "illuminate/events": "^11.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5",
-        "orchestra/testbench": "^8.19"
+        "phpunit/phpunit": "^11.0",
+        "orchestra/testbench": "^9.0"
     },
     "autoload": {
         "psr-4": {
